--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+
+body {
+	text-align: center;
+}
+
+.container{
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px 10px 10px 10px;
+	display: inline-block;
+	border-radius: 10px;
+	box-shadow: 2px 2px 10px #333;
+	background: none repeat scroll 0% 0% rgba(10,10,10,0.5);
+	color: #fff;
+}
+
+.settings{
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	padding: 10px 10px 10px 20px;
+}
+
 .color-box1, .color-box2 {
 	float:left;
 	width:30px;
@@ -5,3 +30,4 @@
 	margin:5px;
 	border: 1px solid;
 }
+
