--- a/css/tiles.css
+++ b/css/tiles.css
@@ -1,10 +1,3 @@
-.tiles_color, .grout_color, .tiles_gradient_color, .grout_gradient_color{
-	width:30px;
-	height:30px;
-	border: 1px solid;
-	margin-left: 5px;
-}
-
-.tiles_color, .grout_color{
+#tiles_color, #grout_color{
 	margin:5px;
 }
