--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
-
 body {
+	background: url('../images/background_finished.jpg');
 	text-align: center;
 	font-family:"Open Sans";
+	color: #fff;
 }
 
 .container, .type_chooser, .settings{
@@ -13,13 +14,13 @@ body {
 
 .container, .settings{
 	border-radius: 2px;
-	box-shadow: 2px 2px 10px #333;
+	box-shadow: 2px 2px 10px #222;
 }
 
 .container{
 	color: #fff;
 	display:inline-block;
-	background: none repeat scroll 0% 0% rgba(10,10,10,0.5);
+	background: none repeat scroll 0% 0% rgba(10,10,10,0.7);
 }
 
 .settings{
@@ -27,7 +28,7 @@ body {
 	width:280px;
 	margin-left:20px;
 	margin-right:20px;
-	background: none repeat scroll 0% 0% rgba(10,10,10,0.3);
+	background: none repeat scroll 0% 0% rgba(10,10,10,0.4);
 }
 
 .type_chooser{
